--- a/introduction.html
+++ b/introduction.html
@@ -35,6 +35,13 @@
 			
 			</header>
 			
+			
+			<div class="wrapper">
+				<div class="hero">
+	<!-- 				set image in css -->
+				</div>
+			</div>
+			
 			<div class="wrapper">
 
 				<main>
