--- a/description.html
+++ b/description.html
@@ -5,8 +5,9 @@
 		
 		<title>Churchill House </title>
 		<meta charset="utf-8">
-		<link href="assets/css/reset.css" rel="stylesheet">
-		<link href="assets/css/styles.css" rel="stylesheet">
+		<link href="assets/css/reset.css" rel="stylesheet"/>
+		<link href="assets/css/styles.css" rel="stylesheet"/>
+		<meta name="viewport" content="width=deivce-witdh, intial-scale=1.0">
 		
 		
 	</head>
